[package]
name = "dns"
version = "0.1.0"
authors = ["Tyler Stanish <tystanish@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
resize-slice = "0.1.3"
ttl_cache = "0.5.1"
yaml-rust = "0.4"

[dev-dependencies]
pretty_assertions = "0.6.1"
tempdir = "0.3.7"
